--- a/dakajy/css/jy/index.css
+++ b/dakajy/css/jy/index.css
@@ -11,10 +11,41 @@
   height: 9%;
 }
 
+.part-head-user{
+  margin-top: 4.7%;
+  width: 50%;
+  float:left;
+}
+
+.part-head-user img{
+  width: 23px;
+  height: 23px;
+}
+
+.part-head-user label{
+  height: 28px;
+  line-height: 28px;
+  object-fit: contain;
+  font-family: PingFangSC;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  color: #dddddd;
+  margin-left: 3%;
+}
+
+.part-head-logo {
+  margin-top: 4.7%;
+  width: 50%;
+  float: right;
+}
+
 .part-head-logo img{
   float: right;
-  margin-top: 4.7%;
+  margin-top: 3%;
 }
+
 .img-logo {
   width: 11px;
   height: 23px;
@@ -48,4 +79,110 @@
   width: 17.4%;
   height: 20.6%;
   margin-top: 18%;
+}
+
+/**
+* bgk for daka.html
+*/
+.bgk2container {
+  background: url('./../../img/dakahome/background.png');
+  background-size: contain;
+}
+
+
+.part-page {
+  height: 100%;
+}
+
+.page-graph {
+  height: 58%;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.agraph {
+  height: 95%;
+}
+
+.aline img{
+  object-fit: contain;
+  width: 100%;
+}
+
+.page-sign {
+  height: 40%;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.page-sign label {
+  width: 60px;
+  height: 20px;
+  object-fit: contain;
+  font-family: PingFangSC;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  color: #dddddd;
+}
+
+.tdgroup {
+  margin-top: 10px;
+}
+
+.tdgroup table {
+  text-align: center;
+  width: 100%;
+}
+
+.tdgroup table td{
+  width: 35px;
+  height: 35px;
+}
+
+.tdgroup table label{
+    width: 35px;
+    height: 35px;
+    border: solid 1.5px #1d976c;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    font-family: PingFangSC;
+    font-size: 18px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    color: #1d976c;
+}
+
+.abtn{
+  margin-top: 8%;
+  text-align: center;
+}
+
+.jybtn {
+  width: 160px;
+  height: 40px;
+  object-fit: contain;
+  border: solid 1px #93f9b9;
+  background-color: inherit;
+  text-align: center;
+  line-height: 30px;
+  font-family: PingFangSC;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  color: #93f9b9;
+}
+
+.agif {
+  margin-top: 8%;
+  text-align: center;
+}
+
+.agif img{
+  width: 40px;
+  height: 15px;
 }
