[done] 打卡web + end
1、动效还没有完全做
2、安全性能
3、session

--- a/dakajy/css/jy/index.css
+++ b/dakajy/css/jy/index.css
@@ -3,7 +3,7 @@
 */
 @font-face {
   font-family: "EurostileMN";
-  src: url("./eurostile_mn_extended.ttf");
+  src: url("./../../font/eurostile_mn_extended.ttf");
 }
 
 .bgkcontainer {
